gotta fix the text

--- a/devbot-testing.ipynb
+++ b/devbot-testing.ipynb
@@ -12,33 +12,29 @@
       "Welcome to Dev bot!\n",
       "\n",
       "\n",
-      "Hello there. How can I help you today?\n",
-      "OK. I've added \"Add a homepage to the website\" to the feature request list. Anything else?\n",
+      "OK, what is the project about?\n",
+      "OK. First, let's make a list of features we want to include:\n",
+      "OK. Anything else?\n",
       "Requested Features:\n",
-      "  homepage : Add a homepage to the website\n",
-      "OK. Just to confirm, you want to add \"Add a homepage to the website\" to the feature request list, is that correct?\n",
-      "OK. The request has been sent to the development team. Estimated completion time is 7 minutes.\n",
-      "Goodbye! Have a great day!\n",
-      "\n",
-      "\n",
-      "\n",
-      "[dev bot session over]\n",
-      "\n",
-      "Requested Features:\n",
-      "  [('homepage', 'Add a homepage to the website')]\n",
-      "\n",
-      "- Thanks for using Dev Bot!\n"
+      "  user_guessing_game : user guesses a random number and random number genator decides if they win\n",
+      "import random\\n\\ndef guess_number():\\n    # Generate a random number between 1 and 99\\n    number = random.randint(1, 99)\\n\\n    # Get the user's guess\\n    guess = int(input(\\\"Guess a number between 1 and 99: \\\"))\\n\\n    # Check if the user's guess is correct\\n    if guess == number:\\n        print(\\\"You guessed the correct number!\\\")\\n    else:\\n        print(\\\"Sorry, you didn't guess the correct number. The number was \\\" + str(number) + \\\".\\\")\\n\\n\\n# Call the guess_number() function\\nguess_number()\n",
+      "session terminate\n"
      ]
     }
    ],
    "source": [
     "from devbot import run_bot\n",
-    "PROMPT=\"\"\"\\You are a talented and technical project manager interacting with users via chat interface your ultimate goal is to use ship_features to help drive the growth of the product\n",
-    "To get the current status of the project use project_status to see a summary for your own viewing\n",
-    "Add items to the feature list with request_feature, remove specific items with remove_feature, and reset the list with clear_features\n",
-    "You can do the same thing with the project_notes list but this is for your own purpose\n",
-    "To see the contents of the feature list, call get_features (by default this is shown to you, not the user)\n",
-    "Always confirm_features with the user (double-check) before calling ship_features Calling confirm_features will display the order items to the user and returns their response to seeing the list. Their response may contain modifications.\n",
+    "PROMPT=\"\"\"\\You are a talented and technical project manager interacting with users via chat interface\n",
+    "As a project manager, your goal is to iterate so follow this general cycle:\n",
+    "1. Status - Get the current status of the project using project_status, if there is nothing yet ask the user what the project should be about\n",
+    "2. Scope - Once the project objective has been identified, work with the user to identify specific features to add\n",
+    "3. Build - Once the features have been confirmed with confirm_features, build out the necessary files\n",
+    "4. Check - Talk with the user and repeat cycle as many times until the user says goodbye, then use say_goodbye\n",
+    "\n",
+    "You have three lists at your disposal:\n",
+    "1. Project notes - Some context and notes on the current project : Maintain the list with add_project_note,remove_project_note\n",
+    "2. Feature List - features to include in the next realese: use request_feature, get_features, remove_feature, clear_features to modify \n",
+    "3. Project Files - Files currently in the project dir : use add_to_file,overwrite_file,delete_file,check_file_contents for file mgt\n",
     "\n",
     "There are no specific requirements as each project will look different, but here are a few preferred languages/frameworks\n",
     "- Python\n",
@@ -46,6 +42,63 @@
     "\"\"\"\n",
     "run_bot(PROMPT)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"testing.py\", \"w\") as file:  # Use \"w\" for writing only\n",
+    "    file.writelines(\"this is a test /n this ia test \\n this is a test\")  # Write the string directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from devbot import add_to_file\n",
+    "\n",
+    "add_to_file('testing.py',\"this is a test /n this ia test \\n this is a test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_string = \"import random\\n\\n# Get a random number between 1 and 100\\nsecret_number = random.randint(1, 100)\\n\\n# Get the user's guess\\nguess = int(input(\\\"Guess a number between 1 and 100: \\\"))\\n\\n# Check if the guess is correct\\nif guess == secret_number:\\n    print(\\\"You win!\\\")\\nelse:\\n    print(\\\"You lose!\\\")\"\n",
+    "\n",
+    "test_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(test_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(test_string.replace(\"\\n\\n\", \"\\n\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
